--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Aplicativo de compras de supermercado">
   <meta name="theme-color" content="#FF8038">
 
   <!-- iOS meta tags & icons -->
@@ -37,6 +37,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
 
   <!-- Outhers icons -->
+  <link rel="icon" type="image/png" href="favicon.png" />
   <link rel="icon" type="image/png" sizes="192x192" href="/icons/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
@@ -51,7 +52,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3715459334';
+    var serviceWorkerVersion = '2932185496';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
