--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
+  <!-- Apple WebGL 2.0 fix (https://github.com/flutter/flutter/issues/89655#issuecomment-919685843) -->
+  <!-- TODO: Remove when https://github.com/flutter/engine/pull/29038 is merged to stable -->
+  <script src="https://unpkg.com/platform@1.3.5/platform.js"></script>
+  <script type="text/javascript">
+    let isSafari = /^((?!chrome|android).)*safari/i.test(platform.ua);
+    if (isSafari) {
+      HTMLCanvasElement.prototype.getContext = function (orig) {
+        return function (type) {
+          return type !== "webgl2" ? orig.apply(this, arguments) : null
+        }
+      }(HTMLCanvasElement.prototype.getContext)
+    }
+  </script>
   <base href="zupt_web">
 
   <meta charset="UTF-8">
@@ -52,7 +52,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2932185496';
+    var serviceWorkerVersion = '792099500';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
