--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }(HTMLCanvasElement.prototype.getContext)
     }
   </script>
-  <base href="zupt_web">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -52,7 +52,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '792099500';
+    var serviceWorkerVersion = '2704171110';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
